#1978 Fixed spelling mistake in LFRic.

--- a/lib/extract/standalone/lfric/kernel_data_standalone.jinja
+++ b/lib/extract/standalone/lfric/kernel_data_standalone.jinja
@@ -162,7 +162,7 @@ contains
     end subroutine WriteField_r{{prec}}
 
     ! -------------------------------------------------------------------------
-    !> @brief This subroutine declares an LFric real-valued {{prec}}-bit field vector.
+    !> @brief This subroutine declares an LFRic real-valued {{prec}}-bit field vector.
     !! Each component of the vector is stored as a separate variable, using the
     !! corresponding array function of the base class.
     !! @param[in,out] this The instance of the extract_PSyDataType.
@@ -279,7 +279,7 @@ contains
     end subroutine WriteIntField
 
     ! -------------------------------------------------------------------------
-    !> @brief This subroutine declares an LFric integer-valued field vector. Each
+    !> @brief This subroutine declares an LFRic integer-valued field vector. Each
     !! component of the vector is stored as a separate variable, using the
     !! corresponding array function of the base class.
     !! @param[in,out] this The instance of the extract_PSyDataType.
