--- a/lib/extract/netcdf/extract_netcdf_base.jinja
+++ b/lib/extract/netcdf/extract_netcdf_base.jinja
@@ -35,6 +35,7 @@
 {% if ALL_TYPES is not defined -%}
    {% set ALL_TYPES = [ ("Double", "real(kind=real64)",   64),
                         ("Real",   "real(kind=real32)",   32),
+                        ("Long",   "real(kind=int64)",    64),
                         ("Int",    "integer(kind=int32)", 32) ] %}
 {% endif -%}
 
@@ -276,6 +277,7 @@ contains
 {% set NCDF_TYPE_MAPPING = { "Double": "NF90_DOUBLE",
                              "Real":   "NF90_REAL",
                              "Logical":"NF90_INT",
+                             "Long":   "NF90_INT64",
                              "Int":    "NF90_INT"} -%}
 
 {% set indent="        " %}
