--- a/lib/extract/standalone/extract_standalone_base.jinja
+++ b/lib/extract/standalone/extract_standalone_base.jinja
@@ -35,6 +35,8 @@
 {% if ALL_TYPES is not defined -%}
    {% set ALL_TYPES = [ ("Double", "real(kind=real64)",   64),
                         ("Real",   "real(kind=real32)",   32),
+                        ("Character",   "character(*)",    8),
+                        ("Long",   "real(kind=int64)",    64),
                         ("Int",    "integer(kind=int32)", 32) ] %}
 {% endif -%}
 
@@ -42,7 +44,7 @@
 ! -----------------------------------------------------------------------------
 ! BSD 3-Clause License
 !
-! Copyright (c) 2022, Science and Technology Facilities Council.
+! Copyright (c) 2022-2023, Science and Technology Facilities Council.
 ! All rights reserved.
 !
 ! Redistribution and use in source and binary forms, with or without
