--- a/lib/extract/netcdf/read_kernel_data_mod.jinja
+++ b/lib/extract/netcdf/read_kernel_data_mod.jinja
@@ -289,13 +289,14 @@ contains
         value = tmp == 1
         deallocate(tmp)
         {% else %}
+        {% if name == "Char" %}
+        ! Initialise the whole array with "".
+        value = ""
+        {% else %}
         ! Initialise it with 0, so that an array comparison will work
         ! even though e.g. boundary areas or so might not be set at all.
         ! The compiler will convert the double precision value to the right
         ! type (e.g. int or single precision).
-        {% if name == "Char" %}
-        value = ""
-        {% else %}
         value = 0.0d0
         {% endif %}
         retval = CheckError(nf90_get_var(this%ncid, varid, value))
